--- a/style.css
+++ b/style.css
@@ -98,13 +98,13 @@ body{
     border: 5px solid #d1d8e0;
 }
 .ticket-cont{
-    height: 12rem;
+    height: 13rem;
     width: 16rem;
     background-color: #f1f2f6;
 }
 .ticket-color{
     height: 1rem;
-    background-color: lightpink;
+    
 }
 .ticket-id{
     height: 2rem;
@@ -112,9 +112,19 @@ body{
     
 }
 .task-area{
-    height: calc( 100% - 1rem - 2rem );
+    height: calc( 100% - 1rem - 2rem - 2rem );
     
     padding: 0.4rem;
+    outline: none;
+}
+.ticket-lock{
+    height: 2rem;
+
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 1rem;
+    font-size: 1.5rem;
+    color: #a5b1c2;
 }
 
 .main-cont{
