--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 }
 .action-btn-cont{
     height: 3rem;
-    width: 8rem;
+    width: 6rem;
     background-color: #3d3d3d;
     display: flex;
 }
@@ -40,7 +40,7 @@ body{
 }
 .color{
     height: 1.2rem;
-    width: 3rem;
+    width: 2rem;
     background-color: lightpink;
     border-radius: 2px;
   
@@ -68,6 +68,8 @@ body{
     top: calc( ( 100vh - 50vh) / 2 );
     left:calc( ( 100vw - 45vw) / 2 ) ;
     display: none;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    
 }
 .textarea-cont{
     height: 100%;
@@ -133,4 +135,38 @@ body{
     padding: 2rem;
     gap: 1rem;
     justify-content: center;
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px){
+    .modal-cont{
+        width: 60vw;
+        left:calc( ( 100vw - 60vw) / 2 ) ;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .modal-cont{
+        width: 75vw;
+        height: 55vh;
+        top: calc( ( 100vh - 55vh) / 2 );
+        left:calc( ( 100vw - 75vw) / 2 ) ;
+        flex-direction: column;
+        
+    }
+    .textarea-cont{
+        width: 100%;
+        height: 75%;
+    }
+    .priority-colors-cont{
+        flex-direction: row;
+        width: 100%;
+        height: 25%;
+    }
+    .priority-color{
+        width: 17%;
+    }
+    .toolbox-cont >*{
+        margin-left: 3rem;
+        border-radius: 2px;
+    }
 }
